deploy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apod
  labels:
    app: apod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apod
  template:
    metadata:
      labels:
        app: apod
    spec:
      containers:
        - image: nginx:stable
          name: nginx
          resources:
            requests:
              memory: 64Mi
              cpu: 25m
            limits:
              memory: 128Mi
              cpu: 50m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: default-conf
              mountPath: /etc/nginx/conf.d
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

        - image: ghcr.io/ayresfonseca/apod-nasa:v0.4.7
          name: flask-app
          resources:
            requests:
              memory: 64Mi
              cpu: 25m
            limits:
              memory: 128Mi
              cpu: 50m
          livenessProbe:
            httpGet:
              path: /flask-healthz
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: default-conf
          configMap:
            name: nginx-default-conf
            items:
              - key: default.conf
                path: default.conf
      imagePullSecrets:
        - name: ghcr-apod
