deploy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apod
spec:
  selector:
    app: apod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
