deploy/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apod
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirectscheme@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: apod.anetwork.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apod
                port:
                  number: 80
  tls:
    - hosts:
        - apod.anetwork.cloud
      secretName: tls-apod-ingress-dns
